compile-tests/fixtures/compile-errors/instantiation-not-enough-type-parameters/compile_error.ts
import { ErrorBase } from "../../../../src/macro-assertions";
export default ErrorBase.NotEnoughTypeParameters;
